# gradle-mcp

./: .gitignore  README.md  SECURITY_FIX.md  pyproject.toml  test_implementation.py
src/gradle_mcp/: __init__.py  gradle.py  server.py
tests/: test_gradle.py  test_security.py
